[gd_scene load_steps=28 format=3 uid="uid://bubns2tywueht"]

[ext_resource type="Script" path="res://scenes_2d/context_menus/scripts/tree_context_menu.gd" id="1_3a72v"]
[ext_resource type="Shader" path="res://shaders/menu_blinks/blink_option.gdshader" id="2_axdaj"]
[ext_resource type="Texture2D" uid="uid://dlgu31rkp730q" path="res://icons/all-range-option.svg" id="3_mdpy0"]
[ext_resource type="Texture2D" uid="uid://jws336fx85l6" path="res://icons/ground-option.svg" id="4_52g0q"]
[ext_resource type="Texture2D" uid="uid://jcacjsli1uvw" path="res://icons/air-option.svg" id="5_kdvc8"]
[ext_resource type="Texture2D" uid="uid://jd51lcgf68hj" path="res://icons/arrow-option.svg" id="6_58r0c"]
[ext_resource type="PackedScene" uid="uid://xniqt5ldhvis" path="res://scenes_2d/hud/price_tag.tscn" id="7_g42o3"]
[ext_resource type="FontFile" uid="uid://cdccw3poh5c27" path="res://fonts/AlphaProta-G33Vm.ttf" id="8_upt6c"]
[ext_resource type="Texture2D" uid="uid://ko8jqya7tpgs" path="res://icons/cannon-option.svg" id="9_2gm1x"]
[ext_resource type="Texture2D" uid="uid://cyr0kr1sdqrg" path="res://icons/anti-air-option.svg" id="10_c84p5"]
[ext_resource type="Texture2D" uid="uid://c4qe1usvce8bm" path="res://icons/menu-arrow.svg" id="11_duxam"]
[ext_resource type="PackedScene" uid="uid://cl5dwiiyf0jvd" path="res://scenes_2d/a_button.tscn" id="12_yut17"]
[ext_resource type="PackedScene" uid="uid://ddpbkvarml5rb" path="res://scenes_2d/b_button.tscn" id="13_jte13"]
[ext_resource type="FontFile" uid="uid://b8pvc0etwwo81" path="res://fonts/DeltaBlock-2Oee3.ttf" id="15_oatya"]

[sub_resource type="Gradient" id="Gradient_4vl0e"]
offsets = PackedFloat32Array(0.99, 1)
colors = PackedColorArray(0, 0, 0, 0.12549, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_85k8y"]
gradient = SubResource("Gradient_4vl0e")
width = 400
height = 400
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.95)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bu51s"]
resource_local_to_scene = true
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3vdx"]
resource_local_to_scene = true
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2gb0"]
resource_local_to_scene = true
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wtesy"]
resource_local_to_scene = true
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="LabelSettings" id="LabelSettings_sb1pj"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("8_upt6c")
font_size = 24
font_color = Color(0.0313726, 0.937255, 0, 1)
outline_size = 3
outline_color = Color(0, 0.854902, 0.247059, 1)
shadow_size = 7
shadow_color = Color(0.823529, 1, 0.788235, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_3fot3"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("8_upt6c")
font_size = 24
font_color = Color(0.419608, 0, 0.647059, 1)
outline_size = 2
outline_color = Color(1, 0.556863, 1, 1)
shadow_size = 7
shadow_color = Color(1, 0.933333, 1, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_74v5n"]
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="LabelSettings" id="LabelSettings_nbapt"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("8_upt6c")
font_size = 24
font_color = Color(0.0313726, 0.937255, 0, 1)
outline_size = 3
outline_color = Color(0, 0.854902, 0.247059, 1)
shadow_size = 7
shadow_color = Color(0.823529, 1, 0.788235, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_yih28"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("8_upt6c")
font_size = 24
font_color = Color(0.419608, 0, 0.647059, 1)
outline_size = 2
outline_color = Color(1, 0.556863, 1, 1)
shadow_size = 7
shadow_color = Color(1, 0.933333, 1, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1vng7"]
shader = ExtResource("2_axdaj")
shader_parameter/blink = false

[sub_resource type="LabelSettings" id="LabelSettings_xw20b"]
font = ExtResource("15_oatya")
font_size = 24

[node name="TreeContextMenu" type="Control" groups=["hud_items"]]
z_index = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3a72v")
metadata/_edit_vertical_guides_ = [200.0, -200.0, 45.0, -46.0, 79.0]
metadata/_edit_horizontal_guides_ = [200.0, -200.0, 105.0]

[node name="BackdropCircle" type="Sprite2D" parent="."]
position = Vector2(0.5, -1.50001)
texture = SubResource("GradientTexture2D_85k8y")

[node name="MainMenu" type="Node2D" parent="."]

[node name="All-Range-option" type="Sprite2D" parent="MainMenu"]
material = SubResource("ShaderMaterial_bu51s")
position = Vector2(0, -120)
texture = ExtResource("3_mdpy0")

[node name="Ground-option" type="Sprite2D" parent="MainMenu"]
material = SubResource("ShaderMaterial_p3vdx")
position = Vector2(-120, 0)
texture = ExtResource("4_52g0q")

[node name="Air-option" type="Sprite2D" parent="MainMenu"]
material = SubResource("ShaderMaterial_a2gb0")
position = Vector2(120, 0)
texture = ExtResource("5_kdvc8")

[node name="All-RangeMenu" type="Node2D" parent="."]
visible = false

[node name="Arrow-option" type="Sprite2D" parent="All-RangeMenu"]
material = SubResource("ShaderMaterial_wtesy")
position = Vector2(0, -120)
texture = ExtResource("6_58r0c")

[node name="PriceTag" parent="All-RangeMenu/Arrow-option" instance=ExtResource("7_g42o3")]
offset_top = -53.0
offset_bottom = 35.0
rotation = -0.049298
magical_crystal_price = 0

[node name="Pricetag" parent="All-RangeMenu/Arrow-option/PriceTag" index="0"]
position = Vector2(7.29423, 51.366)

[node name="BuilderGemPrice" parent="All-RangeMenu/Arrow-option/PriceTag" index="1"]
anchor_left = 0.142907
anchor_top = 0.728606
anchor_right = 0.142907
anchor_bottom = 0.728606
offset_left = -3.29419
offset_top = -37.1173
offset_right = 104.706
offset_bottom = -0.117367
label_settings = SubResource("LabelSettings_sb1pj")

[node name="BuilderGemThumbnail" parent="All-RangeMenu/Arrow-option/PriceTag" index="2"]
position = Vector2(152.962, 50.5432)

[node name="MagicalCrystalPrice" parent="All-RangeMenu/Arrow-option/PriceTag" index="3"]
visible = false
label_settings = SubResource("LabelSettings_3fot3")

[node name="MagicalCrystalThumbnail" parent="All-RangeMenu/Arrow-option/PriceTag" index="4"]
visible = false

[node name="GroundMenu" type="Node2D" parent="."]
visible = false

[node name="Cannon-option" type="Sprite2D" parent="GroundMenu"]
material = SubResource("ShaderMaterial_74v5n")
position = Vector2(-120, 0)
texture = ExtResource("9_2gm1x")

[node name="PriceTag" parent="GroundMenu/Cannon-option" instance=ExtResource("7_g42o3")]
offset_left = -38.0
offset_top = -16.0
offset_right = 132.0
offset_bottom = 72.0
rotation = 2.35619
builder_gem_price = 120
magical_crystal_price = 0

[node name="BuilderGemPrice" parent="GroundMenu/Cannon-option/PriceTag" index="1"]
anchor_left = 1.05234
anchor_top = 0.771831
anchor_right = 1.05234
anchor_bottom = 0.771831
offset_left = 0.0
offset_top = 0.0
offset_right = 108.0
offset_bottom = 37.0
scale = Vector2(-1, -1)
label_settings = SubResource("LabelSettings_nbapt")

[node name="BuilderGemThumbnail" parent="GroundMenu/Cannon-option/PriceTag" index="2"]
position = Vector2(146.371, 41.0509)
rotation = -0.261799

[node name="MagicalCrystalPrice" parent="GroundMenu/Cannon-option/PriceTag" index="3"]
visible = false
anchor_left = 1.43607
anchor_top = 0.58702
anchor_right = 1.43607
anchor_bottom = 0.587021
scale = Vector2(-1, -1)
label_settings = SubResource("LabelSettings_yih28")

[node name="MagicalCrystalThumbnail" parent="GroundMenu/Cannon-option/PriceTag" index="4"]
visible = false

[node name="AirMenu" type="Node2D" parent="."]
visible = false

[node name="Anti-Air-option" type="Sprite2D" parent="AirMenu"]
material = SubResource("ShaderMaterial_1vng7")
position = Vector2(120, 0)
texture = ExtResource("10_c84p5")

[node name="PriceTag" parent="AirMenu/Anti-Air-option" instance=ExtResource("7_g42o3")]
offset_top = -24.0
offset_bottom = 64.0
builder_gem_price = 150

[node name="MenuArrow" type="Sprite2D" parent="."]
texture = ExtResource("11_duxam")
offset = Vector2(50, 0)

[node name="AButton" parent="." instance=ExtResource("12_yut17")]
position = Vector2(174, 172)

[node name="BButton" parent="." instance=ExtResource("13_jte13")]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -56.0
offset_top = 24.0
offset_right = 64.0
offset_bottom = 51.0
text = "All-Range
"
label_settings = SubResource("LabelSettings_xw20b")
horizontal_alignment = 1

[editable path="All-RangeMenu/Arrow-option/PriceTag"]
[editable path="GroundMenu/Cannon-option/PriceTag"]
